Fixed wod list spacing

--- a/app/styles/partials/components/_wod-item.sass
+++ b/app/styles/partials/components/_wod-item.sass
@@ -1,4 +1,9 @@
 .wod-item
+  padding-bottom: 1em
+  padding-top: 1em
+
+  article
+    padding: 0 !important
 
   .image-container
     margin: 0px
